Add code predicted (GRE) orbits

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -28,6 +28,7 @@ gnss = "?{cddis}/gps/products/${WWWW}/"
 glo = "?{cddis}/pub/glonass/products/${WWWW}/"
 mgex = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
 esa = "?{esa}/products/gnss-products/${WWWW}/"
+code_rt = "?{aiub}/CODE/"
 garner = "?{sopac}/archive/garner/products/${WWWW}/"
 garner_base = "?{sopac}/archive/garner/products/"
 whu_mgex = "?{whu}/pub/whu/MGEX/${WWWW}/"
@@ -43,7 +44,7 @@ iono_brdc = "?{aiub}/CODE/${YYYY}/"
 
 brdc = "?{cddis}/gnss/data/daily/${YYYY}/brdc/"
 
-bias = "?{ign}/pub/igs/products/mgex/dcb/${YYYY}/"
+dcb = "?{ign}/pub/igs/products/mgex/dcb/${YYYY}/"
 dcb_bk = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
 dcb_aiub = "?{aiub}/CODE/${YYYY}/"
 
@@ -65,7 +66,8 @@ none = ""
 #***************************************************************************************************
 
 [CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
+# ALL: available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
 
 # DEFAULT ------------------------------------------------------------------------------------------
 
@@ -113,7 +115,6 @@ ultra_latency = [0 9]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_final = "code_ionex"
-bias = "code_mgex_bias"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
@@ -223,7 +224,6 @@ filename = ["igu${WWWWD}_${6H}.erp"]
 location = ["gnss"]
 
 # CODE ---------------------------------------------------------------------------------------------
-
 [c_code5s]
 description = "Center for Orbit Determination Europe - 3 day arc"
 final = "( code_eph | code_sp3 ) & ( code_erp1 | code_erp2 ) & ( code_clk_05s | code_clk_30s )"
@@ -231,7 +231,7 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-bias = "code_bias"
+dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -244,7 +244,7 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-bias = "code_bias"
+dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -257,11 +257,28 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-bias = "code_bias"
+dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
 vmf = "tuw_vmf | tuw_vmf_fc"
+
+[c_code_predicted]
+description = "Center for Orbit Determination Europe - 1 day predicted - experimental"
+ultra = "( codep_eph ) & ( codep_erp )"
+ultra_latency = [0 3]
+
+[c_code_ultra]
+description = "Center for Orbit Determination Europe - ultrarapid - no download"
+ultra = "( codeultra_eph ) & ( codeultra_erp )"
+ultra_latency = [0 3]
+
+[f_codeultra_eph]
+name = ["GRE@codu"]
+filename = "${YYYY}-${DOY}_${HH}_COD.EPH_U"
+
+[f_codeultra_erp]
+filename = "${YYYY}-${DOY}_${HH}_COD.ERP_U"
 
 [c_code_legacy]
 description = "Center for Orbit Determination Europe - 3 day arc - no mandatory clock"
@@ -270,7 +287,7 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-bias = "code_bias"
+dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -320,6 +337,15 @@ location = ["gnss" "garner_base"]
 filename = "cod${WWWW}7.erp"
 location = ["gnss" "garner_base"]
 
+[f_codep_eph]
+name = ["GRE@codp"]
+filename = "COD${WWWWD}.EPH_P"
+location = ["code_rt"]
+
+[f_codep_erp]
+filename = "COD${WWWWD}.ERP_P"
+location = ["code_rt"]
+
 [f_code_ionex]
 filename = "codg${DOY}0.${YY}i"
 location = "iono"
@@ -332,10 +358,6 @@ location = "iono"
 filename = "c2pg${DOY}0.${YY}i"
 location = "iono"
 
-[f_code_bias]
-filename = "COD${WWWWD}.BIA"
-location = ["bias_aiub"]
-
 # CNES ---------------------------------------------------------------------------------------------
 
 [c_cnes]
@@ -345,7 +367,7 @@ final_latency = [168 312]
 iono_final = "cnes_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-bias = "code_bias"
+dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -370,7 +392,7 @@ location = "iono"
 
 # BNC ----------------------------------------------------------------------------------------------
 [c_bnc]
-description = "Real-time orbits and clocks from IGS Real-time Project"
+description = "Real-time orbits and clocks from IGS Real-time Project (no download)"
 final = "( bnc_sp3 ) & ( bnc_clk )"
 final_latency = [0 0]
 
@@ -439,7 +461,7 @@ ultra = "( gfz_ultra_sp3 ) & ( gfz_ultra_erp  | null )"
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-bias = "code_bias"
+dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -503,7 +525,7 @@ location = ["mgex"]
 description = "Center for Orbit Determination Europe - MGEX"
 final = "code_mgex_eph & ( code_mgex_erp ) & ( code_mgex_clk_30s )"
 final_latency = [168 312]
-bias = "code_mgex_bias"
+bias = "f_code_mgex_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_final = "code_ionex"
@@ -525,7 +547,7 @@ location = ["mgex"]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_03D_12H_ERP.ERP"
 location = ["mgex"]
 
-[f_code_mgex_bias]
+[f_code_mgex_dcb]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_01D_01D_OSB.BIA"
 location = ["mgex"]
 
@@ -541,7 +563,6 @@ location = "iono"
 filename = "c2pg${DOY}0.${YY}i"
 location = "iono"
 
-
 # CNES MGEX ----------------------------------------------------------------------------------------
 
 [c_cnes_mgex]
@@ -551,7 +572,7 @@ final_latency = [168 312]
 iono_final = "cnes_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-bias = "code_bias"
+dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -755,7 +776,7 @@ iono_final = "whuan_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
 iono_broadcast = "code_iono_broadcast"
-bias = "code_bias"
+dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
