Updete remote_resource for ultra local orbits

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -66,8 +66,7 @@ none = ""
 #***************************************************************************************************
 
 [CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
-# ALL: available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
 
 # DEFAULT ------------------------------------------------------------------------------------------
 
@@ -275,10 +274,10 @@ ultra_latency = [0 3]
 
 [f_codeultra_eph]
 name = ["GRE@codu"]
-filename = "${YYYY}-${DOY}_${HH}_COD.EPH_U"
+filename = "cod${WWWWD}_${HH}.eph_u"
 
 [f_codeultra_erp]
-filename = "${YYYY}-${DOY}_${HH}_COD.ERP_U"
+filename = "cod${WWWWD}_${HH}.erp_u"
 
 [c_code_legacy]
 description = "Center for Orbit Determination Europe - 3 day arc - no mandatory clock"
