remote resource old and new naming

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -269,7 +269,7 @@ ultra_latency = [0 3]
 
 [c_code_ultra]
 description = "Center for Orbit Determination Europe - ultrarapid - no download"
-ultra = "( codeultra_eph ) & ( codeultra_erp )"
+ultra = "( codeultra_eph || codeultra_eph_old) & ( codeultra_erp || codeultra_erp_old)"
 ultra_latency = [0 3]
 
 [f_codeultra_eph]
@@ -278,6 +278,14 @@ filename = "cod${WWWWD}_${HH}.eph_u"
 
 [f_codeultra_erp]
 filename = "cod${WWWWD}_${HH}.erp_u"
+
+
+[f_codeultra_eph_old]
+name = ["GRE@codu"]
+filename = "${YYYY}-${DOY}_${HH}_COD.EPH_U"
+
+[f_codeultra_erp_old]
+filename = "${YYYY}-${DOY}_${HH}_COD.ERP_U"
 
 [c_code_legacy]
 description = "Center for Orbit Determination Europe - 3 day arc - no mandatory clock"
