--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -532,7 +532,7 @@ location = ["mgex"]
 description = "Center for Orbit Determination Europe - MGEX"
 final = "code_mgex_eph & ( code_mgex_erp ) & ( code_mgex_clk_30s )"
 final_latency = [168 312]
-bias = "f_code_mgex_dcb"
+bias = "code_mgex_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_final = "code_ionex"
@@ -554,7 +554,7 @@ location = ["mgex"]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_03D_12H_ERP.ERP"
 location = ["mgex"]
 
-[f_code_mgex_dcb]
+[f_code_mgex_bias]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_01D_01D_OSB.BIA"
 location = ["mgex"]
 
