gfz hoic and soic in remote_source.ini

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -59,6 +59,10 @@ vmf_fc_tuwien = "?{ggos_tuwien}/trop_products/GRID/2.5x2/VMF1/VMF1_FC/${YYYY}/"
 
 mgex_brdm = "?{cddis}/pub/gps/data/campaign/mgex/daily/rinex3/${YYYY}/brdm/"
 
+hoic_gfz="?{gfz}/pub/home/GNSS/products/gfz-hoic/IFCz/${YYYY}/"
+soic_gfz="?{gfz}/pub/home/GNSS/products/gfz-hoic/SFCz/${YYYY}/"
+
+
 none = ""
 
 #***************************************************************************************************
@@ -119,6 +123,9 @@ iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
 atm_load = "tuw_atm_load_v04"
 vmf = "tuw_vmf | tuw_vmf_fc"
+hoic = "hoic_gfz | null"
+soic = "soic_gfz | null"
+
 
 [c_igs_legacy]
 description = "IGS average solution - GPS - no mandatory CLK"
@@ -525,6 +532,14 @@ location = ["mgex"]
 [f_gfz_clk_new]
 filename = "GFZ0MGXFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
 location = ["mgex"]
+
+
+[f_hoic_gfz]
+filename = "IFCz${YYYY}${MM}.H${HH}"
+location = ["hoic_gfz"]
+[f_soic_gfz]
+filename = "SFCz${YYYY}${MM}.H${HH}"
+location = ["soic_gfz"]
 
 # CODE MGEX ----------------------------------------------------------------------------------------
 
