remove legacy support for CODE ULTRA orbits

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -276,7 +276,8 @@ ultra_latency = [0 3]
 
 [c_code_ultra]
 description = "Center for Orbit Determination Europe - ultrarapid - no download"
-ultra = "( codeultra_eph || codeultra_eph_old) & ( codeultra_erp || codeultra_erp_old)"
+#ultra = "( codeultra_eph || codeultra_eph_old) & ( codeultra_erp || codeultra_erp_old)"
+ultra = "(codeultra_eph) & ( codeultra_erp)"
 ultra_latency = [0 3]
 
 [f_codeultra_eph]
@@ -285,7 +286,6 @@ filename = "cod${WWWWD}_${HH}.eph_u"
 
 [f_codeultra_erp]
 filename = "cod${WWWWD}_${HH}.erp_u"
-
 
 [f_codeultra_eph_old]
 name = ["GRE@codu"]
