--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -123,8 +123,8 @@ iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
 atm_load = "tuw_atm_load_v04"
 vmf = "tuw_vmf | tuw_vmf_fc"
-hoic = "hoic_gfz | null"
-soic = "soic_gfz | null"
+hoic = "hoic_gfz"
+soic = "soic_gfz"
 
 
 [c_igs_legacy]
