Add bkg IGS mirror to the resources (disabled for the moment)

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -16,6 +16,7 @@ esa = ["navigation-office.esa.int" "80"]
 ggos_tuwien = ["vmf.geo.tuwien.ac.at" "80"]
 vmf_unb = ["unb-vmf1.gge.unb.ca" "80"]
 gfz = ["ftp.gfz-potsdam.de" "21"]
+bkg = ["igs.bkg.bund.de" "21"]
 
 #***************************************************************************************************
 # LOCATION DEFINITION
@@ -27,6 +28,10 @@ gps = "?{cddis}/pub/gps/products/${WWWW}/"
 gnss = "?{cddis}/gps/products/${WWWW}/"
 glo = "?{cddis}/pub/glonass/products/${WWWW}/"
 mgex = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
+#gps = "?{bkg}/IGS/products/orbits/${WWWW}/"
+#gnss = "?{bkg}/IGS/products/mgex/${WWWW}/"
+#glo = "?{bkg}/IGS/products/orbits/${WWWW}/"
+#mgex = "?{bkg}/IGS/products/mgex/${WWWW}/"
 esa = "?{esa}/products/gnss-products/${WWWW}/"
 code_rt = "?{aiub}/CODE/"
 garner = "?{sopac}/archive/garner/products/${WWWW}/"
@@ -189,33 +194,33 @@ location = ["glo"]
 [f_igs_eph_gps_final]
 name = ["G@igs"]
 filename = "igs${WWWWD}.sp3"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_igs_eph_gps_rapid]
 name = ["G@igr"]
 filename = "igr${WWWWD}.sp3"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_igs_eph_gps_ultra]
 name = ["G@igu"]
 filename = "igu${WWWWD}_${6H}.sp3"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_igs_clk_30s]
 filename = "igs${WWWWD}.clk_30s"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_igs_clk_5m_final]
 filename = "igs${WWWWD}.clk"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_igs_clk_5m_rapid]
 filename = "igr${WWWWD}.clk"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_igs_erp_final1]
 filename = "igs${WWWW}7.erp"
-location = ["gnss"]
+location = ["gps"]
 
 [f_igs_erp_final2]
 filename = "igs${YY}p${WWWW}.erp"
@@ -223,11 +228,11 @@ location = ["garner_base"]
 
 [f_igs_erp_rapid]
 filename = ["igr${WWWWD}.erp"]
-location = ["gnss"]
+location = ["gps"]
 
 [f_igs_erp_ultra]
 filename = ["igu${WWWWD}_${6H}.erp"]
-location = ["gnss"]
+location = ["gps"]
 
 # CODE ---------------------------------------------------------------------------------------------
 [c_code5s]
@@ -310,46 +315,46 @@ vmf = "tuw_vmf | tuw_vmf_fc"
 [f_code1d_sp3]
 name = ["GR@cod"]
 filename = "cof${WWWWD}.sp3"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_code1d_eph]
 name = ["GR@cod"]
 filename = "cof${WWWWD}.eph"
-location = ["gnss" "gavmf_tuwienrner"]
+location = ["gps" "gavmf_tuwienrner"]
 
 [f_code1d_clk_30s]
 filename = "cof${WWWWD}.clk"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_code1d_clk_05s]
 filename = "cof${WWWWD}.clk_05s"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_code_sp3]
 name = ["GR@cod"]
 filename = "cod${WWWWD}.sp3"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_code_eph]
 name = ["GR@cod"]
 filename = "cod${WWWWD}.eph"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_code_clk_30s]
 filename = "cod${WWWWD}.clk"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_code_clk_05s]
 filename = "cod${WWWWD}.clk_05s"
-location = ["gnss" "garner"]
+location = ["gps" "garner"]
 
 [f_code_erp1]
 filename = "cod${WWWW}p.erp"
-location = ["gnss" "garner_base"]
+location = ["gps" "garner_base"]
 
 [f_code_erp2]
 filename = "cod${WWWW}7.erp"
-location = ["gnss" "garner_base"]
+location = ["gps" "garner_base"]
 
 [f_codep_eph]
 name = ["GRE@codp"]
@@ -630,15 +635,15 @@ vmf = "tuw_vmf | tuw_vmf_fc"
 
 [f_emr_eph]
 filename = "emr${WWWWD}.sp3"
-location = ["gnss"]
+location = ["gps"]
 
 [f_emr_clk_30s]
 filename = "emr${WWWWD}.clk"
-location = ["gnss"]
+location = ["gps"]
 
 [f_emr_erp]
 filename = "emr${WWWW}7.erp"
-location = ["gnss"]
+location = ["gps"]
 
 # ESOC ---------------------------------------------------------------------------------------------
 
