iono center in interface

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -24,14 +24,14 @@ bkg = ["igs.bkg.bund.de" "21"]
 # list of possible locations
 
 [LOCATION]
-gps = "?{cddis}/pub/gps/products/${WWWW}/"
-gnss = "?{cddis}/gps/products/${WWWW}/"
-glo = "?{cddis}/pub/glonass/products/${WWWW}/"
-mgex = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
-#gps = "?{bkg}/IGS/products/orbits/${WWWW}/"
-#gnss = "?{bkg}/IGS/products/mgex/${WWWW}/"
-#glo = "?{bkg}/IGS/products/orbits/${WWWW}/"
-#mgex = "?{bkg}/IGS/products/mgex/${WWWW}/"
+#gps = "?{cddis}/pub/gps/products/${WWWW}/"
+#gnss = "?{cddis}/gps/products/${WWWW}/"
+#glo = "?{cddis}/pub/glonass/products/${WWWW}/"
+#mgex = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
+gps = "?{bkg}/IGS/products/orbits/${WWWW}/"
+gnss = "?{bkg}/IGS/products/mgex/${WWWW}/"
+glo = "?{bkg}/IGS/products/orbits/${WWWW}/"
+mgex = "?{bkg}/IGS/products/mgex/${WWWW}/"
 esa = "?{esa}/products/gnss-products/${WWWW}/"
 code_rt = "?{aiub}/CODE/"
 garner = "?{sopac}/archive/garner/products/${WWWW}/"
@@ -207,6 +207,7 @@ ultra = "igs_eph_gps_ultra & ( igs_erp_ultra | null )"
 ultra_latency = [0 9]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
+bias = "code_mgex_bias"
 iono_center = "default"
 atm_load = "tuw_atm_load_v04"
 vmf = "tuw_vmf | tuw_vmf_fc"
