Update resurces file to avoid (partially) using CDDIS for CODE iono

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -46,7 +46,10 @@ rtpp = "?{cddis}/pub/gps/products/rtpp/${WWWW}/"
 brdc = "?{cddis}/gnss/data/daily/${YYYY}/brdc/"
 
 iono_cddis = "?{cddis}/gnss/products/ionex/${YYYY}/${DOY}/"
-iono_brdc = "?{aiub}/CODE/${YYYY}/"
+iono_aiub = "?{aiub}/CODE/IONO/${YYYY}/${DOY}/"
+iono_aiub_p1 = "?{aiub}/CODE/IONO/P1/${YYYY}/"
+iono_aiub_p2 = "?{aiub}/CODE/IONO/P2/${YYYY}/"
+aiub_code = "?{aiub}/CODE/${YYYY}/"
 
 dcb = "?{ign}/pub/igs/products/mgex/dcb/${YYYY}/"
 dcb_bk = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
@@ -130,16 +133,22 @@ filename = "igrg${DOY}0.${YY}i"
 location = "iono_cddis"
 
 [f_code_ionex]
-filename = "codg${DOY}0.${YY}i"
-location = "iono_cddis"
+filename = "CODG${DOY}0.${YY}I"
+location = "aiub_code"
 
 [f_code_predicted1]
-filename = "c1pg${DOY}0.${YY}i"
-location = "iono_cddis"
+filename = "COPG${DOY}0.${YY}I"
+location = "iono_aiub_p1"
 
 [f_code_predicted2]
 filename = "c2pg${DOY}0.${YY}i"
 location = "iono_cddis"
+
+# CODE ionosphere Klobuchar parameters -------------------------------------------------------------
+
+[f_code_iono_broadcast]
+filename = "CGIM${DOY}0.${YY}N"
+location = ["aiub_code"]
 
 [f_esa_ionex]
 filename = "esag${DOY}0.${YY}i"
@@ -906,9 +915,3 @@ location = ["vmf_fc_tuwien"]
 [f_dlrtum_broadcast]
 filename = "brdm${DOY}0.${YY}p"
 location = ["mgex_brdm"]
-
-# CODE ionosphere Klobuchar parameters -------------------------------------------------------------
-
-[f_code_iono_broadcast]
-filename = "CGIM${DOY}0.${YY}N"
-location = ["iono_brdc"]
