--- a/source/remote_resource.ini
+++ b/source/remote_resource.ini
@@ -108,7 +108,7 @@ iono_broadcast = "empty"
 [ic_default]
 description = "Default: IGS final + CODE"
 iono_final = "igs_ionex"
-iono_rapid = "code_ionex_rapid"
+iono_rapid = ""
 iono_predicted1 = "code_predicted1"
 iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
@@ -124,7 +124,7 @@ iono_broadcast = ""
 [ic_code]
 description = "Center for Orbit Determination Europe"
 iono_final = "code_ionex"
-iono_rapid = "code_ionex_rapid"
+iono_rapid = ""
 iono_predicted1 = "code_predicted1"
 iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
@@ -132,7 +132,7 @@ iono_broadcast = "code_iono_broadcast"
 [ic_code_ign]
 description = "Center for Orbit Determination Europe @ IGN, distinct name for p1/p2"
 iono_final = "code_ionex"
-iono_rapid = "code_ionex_rapid"
+iono_rapid = ""
 iono_predicted1 = "code_predicted1_bk"
 iono_predicted2 = "code_predicted2_bk"
 iono_broadcast = "code_iono_broadcast"
