Fix MacMillan gradients according to their definition in the paper
Use Herring hydrostatic mapping function with 15C of temperature

--- a/data/project/default_PPP/config/settings_NET.ini
+++ b/data/project/default_PPP/config/settings_NET.ini
@@ -60,7 +60,7 @@ sss_file_based = 0
 # Session duration in seconds
 sss_duration = 3600
 # Session buffer in second [left right]
-sss_buffer = [10800 10800]
+sss_buffer = [7200 7200]
 
 # Computing the troposphere on multiple sessions (even with buffering)
 # could produce discontinuous series, at the change of session.
@@ -111,10 +111,10 @@ flag_download = 1
 
 # Preferred ephemeris type,
 # accepted values: "final" "rapid" "ultra" "broadcast" "real-time"
-preferred_eph = ["final" "rapid"]
+preferred_eph = ["final"]
 # Preferred ionospheric type,
 # accepted values: "final" "rapid" "predicted1" "predicted2" "broadcast"
-preferred_iono = ["final" "rapid" "predicted1" "predicted2" "broadcast"]
+preferred_iono = ["final" "predicted1" "predicted2" "broadcast"]
 # SELECTED computational center (e.g. default, igs_glo, igs_gps, code, code_mgex, gfz, jaxa
 selected_orbit_center = ["code_mgex_aiub"]
 selected_iono_center = ["code"]
@@ -123,7 +123,7 @@ selected_iono_center = ["code"]
 preferred_vmf_res = ["1x1" "2.5x2" "5x5"]
 # Preferred VMF source,
 # accepted values: "operational" "era-interim" "forecast"
-preferred_vmf_source = ["operational" "forecast"]
+preferred_vmf_source = ["operational"]
 
 #----------------------------------------------------------------------------------
 [REFERENCE]
@@ -241,15 +241,15 @@ sigma0_r_clock = 31
 GPS_is_active = 1
 # Frequencies to be used when this constellation is active
 GPS_L1 = 1
-GPS_L2 = 1
+GPS_L2 = 0
 GPS_L5 = 0
 
 # GLONASS satellite system
 GLO_is_active = 1
 # Frequencies to be used when this constellation is active
 GLO_G1 = 1
-GLO_G2 = 1
-GLO_G3 = 1
+GLO_G2 = 0
+GLO_G3 = 0
 
 # Galileo satellite system
 GAL_is_active = 0
@@ -302,7 +302,7 @@ abs_snr_thr = 0
 # scaling is performet with respect to the code error level of the first frequency/tracking (usually 1C)
 scaled_snr_thr = 0
 # Minimum length an arc in seconds
-min_arc = 10
+min_arc = 300
 
 # Enable outlier detection (0/1)
 flag_outlier = 1
@@ -520,7 +520,7 @@ flag_free_net_tropo = 0
 # Estimates ionosphere in PPP
 flag_iono_ppp = 1
 # Estimates ionosphere in network
-flag_iono_net = 1
+flag_iono_net = 0
 # Estimate receiver clock error in PPP
 flag_rec_clock_ppp = 1
 # Estimate receiver clock error in network
@@ -572,7 +572,7 @@ areg_rec_ifbias_net = -1
 # Differential regularization receiver interfrequency bias in PPP [m/sqrt(h)]
 dreg_rec_ifbias_ppp = -1
 # Differential regularization receiver interfrequency bias in network [m/sqrt(h)]
-dreg_rec_ifbias_net = -1
+dreg_rec_ifbias_net = 10
 # Estimate satellite interfrequency bias in PPP
 flag_sat_ifbias_ppp = 1
 # Estimate satellite interfrequency bias in network
@@ -592,7 +592,7 @@ areg_sat_ifbias_net = -1
 # Differential regularization satellite interfrequency bias in PPP [m/sqrt(h)]
 dreg_sat_ifbias_ppp = -1
 # Differential regularization satellite interfrequency bias in network [m/sqrt(h)]
-dreg_sat_ifbias_net = -1
+dreg_sat_ifbias_net = 10
 # Estimate receiver intertracking bias in PPP
 flag_rec_trkbias_ppp = 1
 # Estimate receiver intertracking bias in network
@@ -1013,18 +1013,21 @@ flag_sreg_ztd_ppp = 0
 # 
 # ----------------------------------------------------------------------------------------------
 # 
-cmd_001 = "PINIT N6"
-cmd_002 = "PAR S1:24"
-cmd_003 = "FOR T*"
+cmd_001 = "PINIT N8"
+cmd_002 = "PAR S*"
+cmd_003 = "FOR T1"
 cmd_004 = "LOAD T$ @30s -t=CPLS"
-cmd_005 = "REMSAT T$ R11"
-cmd_006 = "PREPRO T$"
-cmd_007 = "END"
-cmd_008 = "NET T1,2 R1 -U"
-cmd_009 = "NET T1,3 R1 -U"
-cmd_010 = "PUSHOUT T*"
+cmd_005 = "PREPRO T$"
+cmd_006 = "END"
+cmd_007 = "FOR T2:END W1"
+cmd_008 = "LOAD T$ @30s -t=CPLS"
+cmd_009 = "PREPRO T$"
+cmd_010 = "NET T$,1 R1 -U"
 cmd_011 = "END"
-cmd_012 = "PKILL"
-cmd_013 = "EXPORT T* COO_TXT"
-cmd_014 = "SHOW T* R1 ENUBSL --ctype=-1"
+cmd_012 = "REMTMP T*"
+cmd_013 = "PUSHOUT T*"
+cmd_014 = "END"
+cmd_015 = "PKILL"
+cmd_016 = "EXPORT T* COO_TXT"
+cmd_017 = "SHOW T* R1 ENUBSL --ctype=-1"
 
