Change Core version number

--- a/data/project/default_PPP/config/parallel_settings_PPP.ini
+++ b/data/project/default_PPP/config/parallel_settings_PPP.ini
@@ -2,7 +2,7 @@
 [SOFTWARE]
 #----------------------------------------------------------------------------------
 # goGPS config file
-version = "1.0b9"
+version = "1.0 RC1"
 
 #----------------------------------------------------------------------------------
 [PARALLELISM]
@@ -1013,10 +1013,10 @@ flag_sreg_ztd_ppp = 0
 # 
 # ----------------------------------------------------------------------------------------------
 # 
-cmd_001 = "PINIT N4"
-cmd_002 = "PAR S*"
-cmd_003 = "FOR T*"
-cmd_004 = "LOAD T$"
+cmd_001 = "PINIT N3"
+cmd_002 = "FOR S*"
+cmd_003 = "PAR T*"
+cmd_004 = "LOAD T$ -s=GRE -t=CPLS @30s"
 cmd_005 = "REMSAT T$ R11"
 cmd_006 = "PREPRO T$"
 cmd_007 = "PPP T$"
