Update WHUAN final and GFZ rapid MGEX  remote resources paths

--- a/source/remote_resource.ini
+++ b/source/remote_resource.ini
@@ -13,6 +13,7 @@ whu = ["igs.gnsswhu.cn" "21"]
 sopac = ["garner.ucsd.edu" "21"]
 kasi = ["nfs.kasi.re.kr" "21"]
 esa = ["navigation-office.esa.int" "80"]
+esa_gscc = ["gssc.esa.int" "21"]
 ggos_tuwien = ["vmf.geo.tuwien.ac.at" "80"]
 vmf_unb = ["unb-vmf1.gge.unb.ca" "80"]
 gfz = ["ftp.gfz-potsdam.de" "21"]
@@ -37,6 +38,7 @@ gps = "?{ign_ensg}/pub/igs/products/${WWWW}/"
 gnss = "?{ign_ensg}/pub/igs/products/mgex/${WWWW}/"
 glo = "?{ign_ensg}/pub/igs/products/${WWWW}/"
 esa = "?{esa}/products/gnss-products/${WWWW}/"
+esa_gscc_mgex = "?{esa_gscc}/gnss/products/${WWWW}/mgex/"
 code_rt = "?{aiub}/CODE/"
 aiub_mgex_rapid = "?{aiub}/CODE/${YYYY}_M/"
 aiub_mgex = "?{aiub}/CODE_MGEX/CODE/${YYYY}/"
@@ -46,6 +48,7 @@ whu_mgex = "?{whu}/pub/whu/MGEX/${WWWW}/"
 jpl_final = "?{jpl}/pub/jpligsac/${WWWW}/"
 jpl_rapid = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/"
 gfz_mgex = "?{gfz}/pub/GNSS/products/mgex/${WWWW}/"
+gfz_final = "?{gfz}/pub/GNSS/products/final/w${WWWW}"
 gfz_mgex_ultra =  "?{gfz}/pub/GNSS/products/ultra/w${WWWW}/"
 rtpp = "?{ign_ensg}/pub/gps/products/rtpp/${WWWW}/"
 cnes_rt = "?{ppp_wiz}/products/REAL_TIME/"
@@ -409,9 +412,9 @@ atm_load = "tuw_atm_load_v04"
 
 [oc_gfz]
 description = "GeoForschungsZentrum Potsdam"
-final = "( gfz_sp3 | gfz_sp3_new ) & ( gfz_erp | gfz_erp_new | null ) & ( gfz_clk | gfz_clk_new )"
+final = "( gfz_mgex_sp3 ) & ( gfz_mgex_erp | null ) & ( gfz_mgex_clk ) & ( gfz_mgex_bia | null )"
 final_latency = [48 312]
-rapid = "( gfz_sp3_rapid ) & ( gfz_erp_rapid  | null ) & ( gfz_rapid_clk )"
+rapid = "( gfz_sp3_rapid ) & ( gfz_erp_rapid  | null ) & ( gfz_rapid_clk ) & ( gfz_rapid_bia | null )"
 ultra = "( gfz_sp3_ultra ) & ( gfz_erp_ultra  | null )"
 iono_center = "code"
 atm_load = "tuw_atm_load_v04"
@@ -689,29 +692,49 @@ location = ["jpl_rapid"]
 
 # GFZ ----------------------------------------------------------------------------------------------
 
+[f_gfz_mgex_sp3]
+filename = "GBM0MGXRAP_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
+location = ["gfz_mgex"]
+
+[f_gfz_mgex_clk]
+filename = "GBM0MGXRAP_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
+location = ["gfz_mgex"]
+
+[f_gfz_mgex_erp]
+filename = "GBM0MGXRAP_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
+location = ["gfz_mgex"]
+
+[f_gfz_mgex_bia]
+filename = "GBM0MGXRAP_${YYYY}${DOY}0000_01D_01D_REL.BIA"
+location = ["gfz_mgex"]
+
 [f_gfz_sp3]
-filename = "gbm${WWWWD}.sp3"
-location = ["bkg_mgex"]
+filename = "gfz${WWWWD}.sp3"
+location = ["gfz_final"]
 
 [f_gfz_clk]
-filename = "gbm${WWWWD}.clk"
-location = ["bkg_mgex"]
+filename = "gfz${WWWWD}.clk"
+location = ["gfz_final"]
 
 [f_gfz_erp]
-filename = "gbm${WWWWD}.erp"
-location = ["bkg_mgex"]
+filename = "gfz${WWWWD}.erp"
+location = ["gfz_final"]
 
 [f_gfz_sp3_rapid]
 filename = "GFZ0MGXRAP_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
-location = ["ign_mgex"]
+location = ["esa_gscc_mgex"]
 
 [f_gfz_rapid_clk]
 filename = "GFZ0MGXRAP_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
-location = ["ign_mgex"]
+location = ["esa_gscc_mgex"]
 
 [f_gfz_erp_rapid]
 filename = "GFZ0MGXRAP_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
-location = ["ign_mgex"]
+location = ["esa_gscc_mgex"]
+
+[f_gfz_bia_rapid]
+filename = "GFZ0MGXRAP_${YYYY}${DOY}0000_01D_01D_REL.BIA"
+location = ["esa_gscc_mgex"]
 
 [f_gfz_sp3GR_ultra]
 filename = "gfu${WWWW}0_${6H}.sp3"
@@ -728,19 +751,6 @@ location = ["gfz_mgex"]
 [f_gfz_erp_ultra]
 filename = "gbu${WWWW}0_${6H}.erp"
 location = ["gfz_mgex"]
-
-[f_gfz_sp3_new]
-filename = "GFZ0MGXFIN_${YYYY}${DOY}0000_01D_15M_ORB.SP3"
-location = ["ign_mgex"]
-
-[f_gfz_erp_new]
-filename = "GFZ0MGXFIN_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
-location = ["ign_mgex"]
-
-[f_gfz_clk_new]
-filename = "GFZ0MGXFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
-location = ["ign_mgex"]
-
 
 [f_hoic_gfz]
 filename = "IFCz${YYYY}${MM}.H${HH}"
@@ -864,8 +874,8 @@ location = ["ign_mgex"]
 # WUHAN --------------------------------------------------------------------------------------------
 
 [f_wum_sp3]
-filename = "wum${WWWWD}.sp3"
-location = ["bkg_mgex"]
+filename = "WUM0MGXFIN_${YYYY}${DOY}0000_01D_15M_ORB.SP3"
+location = ["esa_gscc_mgex"]
 
 [f_hour_eph_ultra]
 filename = ["hour${WWWWD}_${HH}.sp3"]
@@ -880,12 +890,12 @@ filename = ["hour${WWWWD}_${HH}.erp"]
 location = ["whu_mgex"]
 
 [f_wum_clk]
-filename = "wum${WWWWD}.clk"
-location = ["bkg_mgex"]
+filename = "WUM0MGXFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
+location = ["esa_gscc_mgex"]
 
 [f_wum_erp]
-filename = "wum${WWWWD}.erp"
-location = ["bkg_mgex"]
+filename = "WUM0MGXFIN_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
+location = ["esa_gscc_mgex"]
 
 [f_wum_sp3_rapid]
 filename = "whr${WWWWD}.sp3"
