Update Default project

--- a/.gitignore
+++ b/.gitignore
@@ -107,37 +107,38 @@
 #/data/project/default_DD/out/*
 #!/data/project/default_DD/out/.gitignore
 
-!/data/project/default_PPP/*
-/data/project/default_PPP/out/*
-/data/project/default_PPP/out_net/*
-!/data/project/default_PPP/out/.gitignore
-!/data/project/default_PPP/antenna
-/data/project/default_PPP/antenna/*
-!/data/project/default_PPP/antenna/.gitignore
-!/data/project/default_PPP/antenna/ATX
-/data/project/default_PPP/antenna/ATX/*
-!/data/project/default_PPP/antenna/ATX/.gitignore
-!/data/project/default_PPP/antenna/ATX/I08.ATX
-!/data/project/default_PPP/antenna/ATX/I14.ATX
-!/data/project/default_PPP/station
-/data/project/default_PPP/station/*
-!/data/project/default_PPP/station/.gitignore
-!/data/project/default_PPP/station/CRD/
-/data/project/default_PPP/station/CRD/*
-!/data/project/default_PPP/station/CRD/.gitignore
-!/data/project/default_PPP/station/CRD/stations.crd
-!/data/project/default_PPP/RINEX
-!/data/project/default_PPP/RINEX/*
-!/data/project/default_PPP/station/MET
-!/data/project/default_PPP/station/MET/.gitignore
-!/data/project/default_PPP/station/MET/*
-!/data/project/default_PPP/station/SNX/
-/data/project/default_PPP/station/SNX/*
-!/data/project/default_PPP/station/SNX/.gitignore
-!/data/project/default_PPP/station/ocean/
-/data/project/default_PPP/station/ocean/*
-!/data/project/default_PPP/station/ocean/.gitignore
-!/data/project/default_PPP/station/ocean/ocean_loading.blq
+!/data/project/default
+!/data/project/default/*
+/data/project/default/out/*
+/data/project/default/out_net/*
+!/data/project/default/out/.gitignore
+!/data/project/default/antenna
+/data/project/default/antenna/*
+!/data/project/default/antenna/.gitignore
+!/data/project/default/antenna/ATX
+/data/project/default/antenna/ATX/*
+!/data/project/default/antenna/ATX/.gitignore
+!/data/project/default/antenna/ATX/I08.ATX
+!/data/project/default/antenna/ATX/I14.ATX
+!/data/project/default/station
+/data/project/default/station/*
+!/data/project/default/station/.gitignore
+!/data/project/default/station/CRD/
+/data/project/default/station/CRD/*
+!/data/project/default/station/CRD/.gitignore
+!/data/project/default/station/CRD/stations.crd
+!/data/project/default/RINEX
+!/data/project/default/RINEX/*
+!/data/project/default/station/MET
+!/data/project/default/station/MET/.gitignore
+!/data/project/default/station/MET/*
+!/data/project/default/station/SNX/
+/data/project/default/station/SNX/*
+!/data/project/default/station/SNX/.gitignore
+!/data/project/default/station/ocean/
+/data/project/default/station/ocean/*
+!/data/project/default/station/ocean/.gitignore
+!/data/project/default/station/ocean/ocean_loading.blq
 
 goGPS_beta9
 !/data/old/settings/
