--- a/source/remote_resource.ini
+++ b/source/remote_resource.ini
@@ -39,6 +39,7 @@ esa = "?{esa}/products/gnss-products/${WWWW}/"
 esa_gscc = "?{esa_gscc}/gnss/products/${WWWW}/"
 esa_gscc_mgex = "?{esa_gscc}/gnss/products/${WWWW}/mgex/"
 code_rt = "?{aiub}/CODE/"
+aiub_dcb = "?{aiub}/CODE/${YYYY}/"
 aiub_mgex_rapid = "?{aiub}/CODE/${YYYY}_M/"
 aiub_mgex = "?{aiub}/CODE_MGEX/CODE/${YYYY}/"
 garner = "?{sopac}/archive/garner/products/${WWWW}/"
@@ -294,7 +295,7 @@ location = ["aiub_code"]
 #***************************************************************************************************
 
 [ORBIT_CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@igs_gps" "R@igs_glo" "G@igs_cddis_gps" "R@igs_cddis_glo" "GREC@default"  "GRECJ@iac" "GRECJ@code_mgex_aiub" "GRE@code_predicted" "GRE@code_predicted2" "GR@code" "GR@cnes_GRE" "GR@cnes_GR" "GREC@cnes_rt" "G@emr" "GR@emx" "GR@esoc" "EGRCJ@esoc_mgex" "GRECJ@gfz" "GR@gfz_GR" "GRJ@jaxa" "GREC@wuhan" "G@jpl"]
+available = ["none" "GRECJI@mgex_broadcast" "G@igs_gps" "R@igs_glo" "G@igs_cddis_gps" "R@igs_cddis_glo" "GREC@default"  "GRECJ@iac" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex_aiub_iono_dcb"  "GRE@code_predicted" "GRE@code_predicted2" "GR@code" "GR@cnes_GRE" "GR@cnes_GR" "GREC@cnes_rt" "G@emr" "GR@emx" "GR@esoc" "EGRCJ@esoc_mgex" "GRECJ@gfz" "GR@gfz_GR" "GRJ@jaxa" "GREC@wuhan" "G@jpl"]
 
 #***************************************************************************************************
 # ORBIT CENTER DEFINITION
@@ -404,6 +405,20 @@ rapid_latency = [0 312]
 real-time = "( codep_eph_aiub ) & ( codep_erp_aiub )"
 real-time_latency = [0 0]
 bias = "code_mgex_aiub_bias"
+iono_center = "code"
+atm_load = "tuw_atm_load_v04"
+
+# CODE MGEX @ AIUB IONO DCB-------------------------------------------------------------------------
+
+[oc_code_mgex_aiub_iono_dcb]
+description = "Center for Orbit Determination Europe - MGEX from AIUB server"
+final = "code_mgex_aiub_eph & ( code_mgex_aiub_erp ) & ( code_mgex_aiub_clk_30s )"
+final_latency = [100 312]
+rapid = "coder_eph_aiub & ( coder_erp_aiub ) & ( coder_clk_aiub )"
+rapid_latency = [0 312]
+real-time = "( codep_eph_aiub ) & ( codep_erp_aiub )"
+real-time_latency = [0 0]
+bias = "code_p1p2_dcb & code_p1c1_dcb" 
 iono_center = "code"
 atm_load = "tuw_atm_load_v04"
 
@@ -686,6 +701,14 @@ location = ["bkg"]
 [f_coder_clk]
 filename = "cod${WWWWD}.clk_m"
 location = ["bkg"]
+
+[f_code_p1p2_dcb]
+filename = "P1P2${YY}${MM}.DCB"
+location = ["aiub_dcb"]
+
+[f_code_p1c1_dcb]
+filename = "P1C1${YY}${MM}.DCB"
+location = ["aiub_dcb"]
 
 # CODE MGEX @ AIUB ---------------------------------------------------------------------------------
 
