fix case sensitive name in remote_resoure.ini

--- a/source/remote_resource.ini
+++ b/source/remote_resource.ini
@@ -745,7 +745,7 @@ location = ["aiub_mgex_rapid"]
 
 [f_codep_eph_aiub]
 name = ["GRE@codp"]
-filename = "cod${WWWWD}.EPH_P"
+filename = "COD${WWWWD}.EPH_P"
 location = ["code_rt"]
 
 [f_codep_erp_aiub]
@@ -755,7 +755,7 @@ location = ["code_rt"]
 
 [f_codep2_eph_aiub]
 name = ["GRE@codp"]
-filename = "cod${WWWWD}.EPH_P2"
+filename = "COD${WWWWD}.EPH_P2"
 location = ["code_rt"]
 
 [f_codep2_erp_aiub]
